--- a/Style/style.css
+++ b/Style/style.css
@@ -1,1 +1,13 @@
 .no-size {height: 100px;}
+p {
+  color: red;
+  font-family:courier;
+  font-size:160%;
+  text-align:center;
+}
+h1,h2 {
+  color: blue;
+  font-family:verdana;
+  font-size:300%;
+  text-align:center;
+}
