--- a/Style/style.css
+++ b/Style/style.css
@@ -6,7 +6,7 @@ p {
   text-align:center;
 }
 h1,h2 {
-  color: blue;
+  color: deepskyblue;
   font-family:verdana;
   font-size:300%;
   text-align:center;
