--- a/Style/style.css
+++ b/Style/style.css
@@ -16,3 +16,12 @@ h1,h2 {
   font-family: cursive;
   color: crimson;
 }
+img {
+  height: 300px;
+}
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: xx-large;
+  font-weight: 700;
+  color: coral;
+ }
