--- a/Style/style.css
+++ b/Style/style.css
@@ -26,10 +26,12 @@ img {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: xx-large;
   font-weight: 700;
-  color: coral;
+  color: tomato;
   margin: 0;
-  background-image: url(../Face.jpg);
+  background-image: url(../Man.jpg);
+  background-size: contain;
   text-align: center;
+  text-decoration: none;
  }
  #pp {
   height: 1343px;
@@ -53,5 +55,5 @@ table {
 .hrzntl-lne ol li a,.hrzntl-lne ul li a {
   display: inline;
   list-style-type: none;
-
 }
+#clock {float: right;}
